Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71964

Multiple Repeaters attached to DelegateModel parts (still) crashes

XMLWordPrintable

    • All
    • 28a31148ca02dbb530fd92dfafbcf71c64af4b70 (qt/qtdeclarative/dev) 796f6e1e8e99ea1046ffe2a744cfd1dca1248258 (qt/qtdeclarative/5.15.0)

      The following crashes on mouse click:

      import QtQuick 2.0
      import QtQml.Models 2.2
      import QtQuick.Window 2.0
      
      Window {
          width: 300
          height: 300
          visible: true    
          DelegateModel {
              id: mdl
      
              model: 1
              delegate: Package {
                  Item {
                      id: first
                      Package.name: "first"
                  }
                  Item{
                      id: second
                      Package.name: "second"
                  }
              }
          }
      
          Repeater {
              model: mdl.parts.first
          }
          Repeater {
              model: mdl.parts.second
          }
      
          MouseArea {
              anchors.fill: parent
              onClicked: mdl.model = 2
          }
      }
      

      see QTBUG-50349 (QTBUG-71941).
      laknoll please have a closer look on this.

        1. main.qml
          2 kB
          Karim Pinter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            bjoern.thiel Bjoern Thiel
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes